--- a/gb/23/7/8/n14030581.md
+++ b/gb/23/7/8/n14030581.md
@@ -3,33 +3,32 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>卡尔加里牛仔节大游行 观众盛赞法轮功队伍</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030596-1_IMG_1709-600x400.jpg" />
-<h6>2023年7月7日，卡尔加里牛仔节大游行在市中心举行。（林采枫/大纪元）
-</h6>
+<h6>2023年7月7日，卡尔加里牛仔节大游行在市中心举行。（林采枫/大纪元）</h6>
 <hr>
 <p>【大纪元2023年07月08日讯】（大纪元记者林采枫加拿大卡尔加里报导）“Yahoo！”“Yeehaw！”2023年7月7日上午9点，在西部特有的欢呼声中，第111届卡尔加里牛仔节大游行登场，拉开十天狂欢的序幕。</p>
 <p>卡尔加里牛仔节素有“地球上最盛大的户外节日”之美誉，每年7月初举行，持续十日，首日大游行的规模更是北美数一数二。近100支队伍，4000人，200匹马，超30万现场观众。随着各国边境的开放，来自世界各地的游客涌至卡尔加里，牛仔节游行今年的规模已尽复疫情前的盛况，甚至尤有过之。</p>
 <p>历年在队伍前方引导游行的牛仔大帅均是重中之重，非名流要人不能入选。明年底执行NASA猎户座太空船首次载人飞行任务的汉森（Jeremy Hansen），作为第一位将登上月球的加拿大人，也因此成为不二之选。</p>
-<figure id="attachment_14030597" aria-describedby="caption-attachment-14030597" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030597-2_IMG_1700.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14030597" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030597-2_IMG_1700-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14030597" class="wp-caption-text">大游行拉开卡尔加里牛仔节十日狂欢序幕。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14030598" aria-describedby="caption-attachment-14030598" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030598-3_IMG_1701.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14030598" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030598-3_IMG_1701-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14030598" class="wp-caption-text">牛仔节游行吉祥物哈利马。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14030599" aria-describedby="caption-attachment-14030599" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030599-4_IMG_1712.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14030599" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030599-4_IMG_1712-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14030599" class="wp-caption-text">今年的牛仔大帅汉森。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14030597" aria-describedby="caption-attachment-14030597" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030597-2_IMG_1700.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14030597" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030597-2_IMG_1700-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14030597" class="wp-caption-text">大游行拉开卡尔加里牛仔节十日狂欢序幕。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14030598" aria-describedby="caption-attachment-14030598" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030598-3_IMG_1701.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14030598" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030598-3_IMG_1701-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14030598" class="wp-caption-text">牛仔节游行吉祥物哈利马。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14030599" aria-describedby="caption-attachment-14030599" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030599-4_IMG_1712.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14030599" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030599-4_IMG_1712-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14030599" class="wp-caption-text">今年的牛仔大帅汉森。（林采枫/大纪元）</figcaption></figure>
 <p>定居卡尔加里已有7年的的达拉佩纳（Arlene Dalapena）表示，每年全家六口都会来看游行，最吸引她的是代表不同民族的队伍，“各个国家的人展示着他们独特的文化，令人着迷。”之后，她们到牛仔公园欣赏马术表演，享受美食。</p>
 <p>来自卡尔加里卫星城艾尔德里的查得（Patricia Chad）今年首次观赏牛仔节大游行，因为她的未婚夫在游行队伍里，“乐趣多多，非常有意思，让人兴奋！”</p>
 <p>美国密歇根州的约德（Larry Yoder）和太太开车自东向西横贯美国，然后北上阿拉斯加，在路途中他们特意取道卡尔加里，为了一睹这个举世闻名的户外节日。他说，尤其因疫情居家数年后，正是外出放松的大好时机，“很兴奋观看游行，尤其喜欢军乐队。”</p>
 <p>福布斯（Brianna Forbes）是新布伦瑞克省兽医学院的学生，她和来自法国西南部城市图卢兹（Toulouse）的同行，目前跟着卡尔加里牛仔节的兽医实习并做研究。她介绍，在家乡的时候就已经听说过卡尔加里牛仔节，趁着实习，正好大饱眼福。“这是很多人希望在一生中能够拥有的机会”，“非常兴奋可以看到很多的马。”</p>
-<figure id="attachment_14030600" aria-describedby="caption-attachment-14030600" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030600-5_IMG_1707.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14030600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030600-5_IMG_1707-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14030600" class="wp-caption-text">军乐队。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14030601" aria-describedby="caption-attachment-14030601" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030601-6_IMG_1723.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14030601" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030601-6_IMG_1723-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14030601" class="wp-caption-text">加拿大骑警。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14030603" aria-describedby="caption-attachment-14030603" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030603-7_IMG_1750.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14030603" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030603-7_IMG_1750-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14030603" class="wp-caption-text">牛仔小姐们。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14030604" aria-describedby="caption-attachment-14030604" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030604-8_IMG_1758_modified.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14030604" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030604-8_IMG_1758_modified-600x448.jpg" alt="" width="600" b="448" /></a><figcaption id="caption-attachment-14030604" class="wp-caption-text">韩国社区。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14030605" aria-describedby="caption-attachment-14030605" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030605-9_IMG_1763.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14030605" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030605-9_IMG_1763-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14030605" class="wp-caption-text">地面小飞机队。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14030600" aria-describedby="caption-attachment-14030600" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030600-5_IMG_1707.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14030600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030600-5_IMG_1707-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14030600" class="wp-caption-text">军乐队。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14030601" aria-describedby="caption-attachment-14030601" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030601-6_IMG_1723.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14030601" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030601-6_IMG_1723-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14030601" class="wp-caption-text">加拿大骑警。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14030603" aria-describedby="caption-attachment-14030603" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030603-7_IMG_1750.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14030603" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030603-7_IMG_1750-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14030603" class="wp-caption-text">牛仔小姐们。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14030604" aria-describedby="caption-attachment-14030604" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030604-8_IMG_1758_modified.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14030604" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030604-8_IMG_1758_modified-600x448.jpg" alt="" width="600" b="448"></a><figcaption id="caption-attachment-14030604" class="wp-caption-text">韩国社区。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14030605" aria-describedby="caption-attachment-14030605" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030605-9_IMG_1763.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14030605" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030605-9_IMG_1763-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14030605" class="wp-caption-text">地面小飞机队。（林采枫/大纪元）</figcaption></figure>
 <p>两支华人队伍──天国乐团和法轮功花车腰鼓队，以其壮观的阵容引人注目。所到之处，路两旁观众发出赞叹，“天哪，太漂亮了！”双手竖起大拇指，热烈挥手。还有些人跟着炼功队，做起相同的动作。不少中国面孔的年轻观众，手机录影，鼓掌欢呼。</p>
 <p>自2009年始，天国乐团已是第十次参加牛仔节游行，今年鼓号乐手多达120人。他们身着传统宫廷乐团服饰，前后身印有“乐”，女子白衣白裙，头戴宽边白帽，男子蓝衣蓝裤，帽子类似唐朝男子的襆头。</p>
-<figure id="attachment_14030606" aria-describedby="caption-attachment-14030606" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030606-10_IMG_1773.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14030606" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030606-10_IMG_1773-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14030606" class="wp-caption-text">天国乐团。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14030607" aria-describedby="caption-attachment-14030607" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030607-11_IMG_1774_modified.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14030607" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030607-11_IMG_1774_modified-600x445.jpg" alt="" width="600" b="445" /></a><figcaption id="caption-attachment-14030607" class="wp-caption-text">天国乐团。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14030606" aria-describedby="caption-attachment-14030606" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030606-10_IMG_1773.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14030606" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030606-10_IMG_1773-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14030606" class="wp-caption-text">天国乐团。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14030607" aria-describedby="caption-attachment-14030607" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030607-11_IMG_1774_modified.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14030607" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030607-11_IMG_1774_modified-600x445.jpg" alt="" width="600" b="445"></a><figcaption id="caption-attachment-14030607" class="wp-caption-text">天国乐团。（林采枫/大纪元）</figcaption></figure>
 <p>“我非常喜欢，他们很棒！”卡尔加里居民高尔德（Deb Gauld）说，“队列整齐，音乐优美，真的很棒！”她注意到乐团的着装与其它军乐队非常不同，很有自己的特色，“我特别喜欢他/她们的帽子。”</p>
 <p>来自维多利亚的唐娜（Donna）也表达了相同的观感，“非常棒！整体配合相当好，音乐很美，我喜欢。”</p>
 <p>法轮功学员的队伍由三个队列组成，最前面为炼功队，向观众展示法轮功功法；中间是花车，造型为一艘巨大的金黄色法船，船体手绘蓝白祥云﹑粉莲碧荷，船上矗立“真、善、忍”三面旗帜，莲花台里端坐仙女；腰鼓队殿后，黄衣粉绸，踏着鼓点，奕奕而行。</p>
-<figure id="attachment_14033943" aria-describedby="caption-attachment-14033943" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14033943-IMG_5175.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14033943" src="https://i.epochtimes.com/assets/uploads/2023/07/id14033943-IMG_5175-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14033943" class="wp-caption-text">法轮大法花车。（大纪元）</figcaption></figure>
-<figure id="attachment_14030609" aria-describedby="caption-attachment-14030609" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030609-13_IMG_1779_modified.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14030609" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030609-13_IMG_1779_modified-600x408.jpg" alt="" width="600" b="408" /></a><figcaption id="caption-attachment-14030609" class="wp-caption-text">法轮大法腰鼓队。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14033943" aria-describedby="caption-attachment-14033943" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14033943-IMG_5175.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14033943" src="https://i.epochtimes.com/assets/uploads/2023/07/id14033943-IMG_5175-600x338.jpg" alt="" width="600" b="338"></a><figcaption id="caption-attachment-14033943" class="wp-caption-text">法轮大法花车。（大纪元）</figcaption></figure>
+<figure id="attachment_14030609" aria-describedby="caption-attachment-14030609" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030609-13_IMG_1779_modified.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14030609" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030609-13_IMG_1779_modified-600x408.jpg" alt="" width="600" b="408"></a><figcaption id="caption-attachment-14030609" class="wp-caption-text">法轮大法腰鼓队。（林采枫/大纪元）</figcaption></figure>
 <p>“非常喜欢，非常喜欢。喜欢他们洋溢的热情，喜欢他们的服装，喜欢他们脸上的笑容，把那种文化特色完全展现出来。”卡尔加里的自雇业者齐恩塔拉（Wojetk Zientara）谈到法轮功队伍时说，“这是我第一次看到这么多人，整齐地走在一起，笑容满面。我住在卡尔加里十五年，从来没有见过这么多的笑容。这真是太了不起了！太出色了！他们的笑容将人们聚集在一起。今天能够看到这些，我真是三生有幸。”</p>
 <p>他表示感到由衷的“喜悦”，“是的，喜悦，一种快乐！”</p>
 <p>说起法船，他形容目睹的那一刻，感觉“心潮澎湃”。而腰鼓队，“那种韵律，很独特，完全不同于其它的队伍。很庄重，有主掌天地、信心满满的味道。”</p>
@@ -39,39 +38,33 @@
 <p>来自中国的杜先生表示，法轮功参加游行“是在弘扬中国文化”，“我觉得真诚、善良这些理念，对世界上任何一个人来说，都是很不错的。”</p>
 <p>责任编辑：齐守善#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/29/n11148760.md#1" target="_blank">林辉：抗战时毒杀日外交官 英雄难逃中共毒手</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">阿肯色州参议院通过决议案 制止中共强摘器官</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/1/n11226848.md#1" target="_blank">共产暴政录：越共排华事件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/12/n7547010.md#1" target="_blank">人生绝望疑无路 修法轮功获重生</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544886.md#1">【佳音时刻】美越签协议 中共最怕的事将发生？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545000.md#1">【新闻大家谈】八炯：亲历统战 台湾需守住防线</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544926.md#1">【纪元焦点】南航机长用生命反抗职场霸凌？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543820.md#1">广东制造业陷寒冬 老牌厂知名外企宣告结业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543930.md#1">人民日报刊文纪念李克强冥诞 求是网删文</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543479.md#1">砸钱也没用 中共这些技术被“卡脖子”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542957.md#1">末日预言疯传 唐绮阳坦言已录好影片交代一事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542863.md#1">鹿晗暴瘦被疑深陷情伤 陈赫帮好友回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543090.md#1">《奥德赛》首支预告片在影院播出 内容已流出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543281.md#1">刘晓庆珠宝公司因民间借贷纠纷被执行44.9万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540339.md#1">走路容易累？改善走路姿势必学4招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/8/n14030581.htm">卡尔加里牛仔节大游行 观众盛赞法轮功队伍</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/8/n14030581.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
